--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+numpy==2.2.6
+opencv-python==4.12.0.88
 python-dotenv==1.1.1
 requests==2.32.5
 urllib3==2.5.0
